@@ -1,3 +1,9 @@
+2018-05-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* pdfparse.c: Revert. The changes on 2018-05-14 must be
+	problematic. Again, kanji characters including 0x5c can't be
+	used as names of image files in (e)-pTeX.
+
 2018-05-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* pdfparse.c: Allow image file names including 0x5c for
